Closes 9, fixed new line problem, although there is still a slight defect if you have too long a word; changed caret to now be a border of a span

--- a/colonel-web-editor/cwb-stylesheet.css
+++ b/colonel-web-editor/cwb-stylesheet.css
@@ -9,10 +9,10 @@ body
     flex-direction: column;
     width: 100%;
     height: 100%;
-    
+    overflow: hidden;
 }
 
-.toolBar 
+.toolBar
 {
     display: flex;
     flex-direction: row;
@@ -40,22 +40,17 @@ body
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
     cursor: text;
 }
 
 .editor
 {
-    display: flex;
-    margin: 8px;
+    padding: 8px;
     width: 100%;
     height: auto;
-    word-break: break-word;
-    white-space: pre;
-}
-
-.char
-{
-
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 .newline_p
@@ -63,12 +58,9 @@ body
     margin: 0px;
 }
 
-.caret 
+#caret
 {
-    display: inline-flex;
-    background-color: rgba(0, 0, 0, 0.24);
-    width:3px;
-    height:13px;
+    border-right: 4px solid rgba(0, 0, 0, 0.452);
 }
 
 .drop
@@ -107,19 +99,19 @@ body
 
 }
 
-.button:hover 
+.button:hover
 {
     background-color: rgba(255, 255, 255, 0.048);
 }
 
 .navSelect
 {
-    
+
 }
 
 .valSelect
 {
-    
+
 }
 
 .dropInput
@@ -146,4 +138,9 @@ body
 .spacer
 {
     width: 100%;
+}
+
+.char
+{
+
 }
